# challenge_telecom_x_latam

./: README.md  TelecomX_LATAM.ipynb  pyproject.toml
