[project]
name = "challenge-telecom-x"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
